# HaloClone

./: .gitignore  CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/engine/: CMakeLists.txt
src/engine/application/: application.cpp  application.hpp
src/engine/application/engine/: engine.cpp  engine.hpp
src/engine/assets/: handle.hpp  meshhandle.hpp  meshlibrary.cpp  meshlibrary.hpp
src/engine/assets/core/: mesh.hpp
src/engine/assets/handles/: meshhandle.hpp
src/engine/assets/import/gltf/: tinygltf.hpp
src/engine/assets/loaders/: tinygltf.hpp
src/engine/assets/storage/: meshlibrary.cpp  meshlibrary.hpp
src/engine/core/api/: api.hpp
src/engine/core/debug/: loglevel.hpp
src/engine/core/engine/: engine.cpp  engine.hpp
src/engine/core/events/: eventbus.cpp  eventbus.hpp
src/engine/core/time/: time.cpp  time.hpp
src/engine/core/window/: basewindow.cpp  basewindow.hpp
src/engine/input/: baseaxis.hpp  basebutton.hpp  gamepad.hpp  keyboard.hpp  manager.cpp  manager.hpp  mouse.cpp  mouse.hpp
src/engine/input/types/: action.hpp  gamepadaxis.hpp  gamepadbutton.hpp  gamepadconnection.hpp  key.hpp  mod.hpp  mousebutton.hpp
src/engine/platform/basewindow/: basewindow.cpp  basewindow.hpp
src/engine/platform/glfw/: eventbridge.cpp  eventbridge.hpp  window.cpp  window.hpp
src/engine/platform/ieventbridge/: ieventbridge.hpp
src/engine/platform/manager/: manager.cpp  manager.hpp
src/engine/platform/sdl3/: eventbridge.cpp  eventbridge.hpp  window.cpp  window.hpp
src/engine/renderer/: irenderer.hpp
src/engine/renderer/opengl/renderer/: renderer.cpp  renderer.hpp
src/engine/renderer/shader/: shader.cpp  shader.hpp  shadermanager.cpp  shadermanager.hpp
src/engine/renderer/vulkan/renderer/: renderer.cpp  renderer.hpp
src/engine/runtime/events/: eventbus.cpp  eventbus.hpp
src/engine/scene/: scene.cpp  scene.hpp
src/engine/scene/components/: camera.hpp  light.hpp  mesh.hpp  tag.hpp  transform.hpp
src/engine/scene/entity/: entity.hpp
src/engine/scene/sceneserializer/: sceneserializer.cpp  sceneserializer.hpp
src/engine/utils/: types.hpp
src/projects/hello_triangle/: CMakeLists.txt  main.cpp
src/projects/hello_triangle/assets/: triangle.glb
src/projects/hello_triangle/scenes/: scene.json
src/projects/test_project/: CMakeLists.txt  main.cpp
